--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,19 @@
-<div class="content" role="main"></div>
+<div class="content" role="main">
+	<div class="main-content">
+		<header>
+			<div class="flex h-full items-center w-full">
+				<a routerLink="/" class="w-1/3 h-full m-0"
+					><img
+						alt="pokémon logo"
+						class="object-contain w-full h-full"
+						src="assets/images/pokemon_logo.png"
+				/></a>
+				<span class="text-white text-3xl md:text-6xl">Pokéguesser</span>
+				<div class="grow"></div>
+			</div>
+		</header>
+		<main class="p-10">
+			<router-outlet></router-outlet>
+		</main>
+	</div>
+</div>
