feat: duplicate pokemon without picture

--- a/src/app/guess/pokemon-item/pokemon-item.component.html
+++ b/src/app/guess/pokemon-item/pokemon-item.component.html
@@ -41,6 +41,10 @@
 			<mat-icon>edit</mat-icon>
 			<span>Edit</span>
 		</button>
+    <button mat-menu-item (click)="openDuplicationDialog()">
+      <mat-icon>file_copy</mat-icon>
+      <span>Duplicate</span>
+    </button>
 		<button mat-menu-item (click)="openDeletionDialog()">
 			<mat-icon>delete</mat-icon>
 			<span>Delete</span>
