--- a/src/app/guess/admin/admin.component.html
+++ b/src/app/guess/admin/admin.component.html
@@ -1,4 +1,6 @@
-<p>admin works!</p> <mat-button-toggle (click)="resetStore()">Reset</mat-button-toggle>
+<p>admin works!</p>
+<mat-button-toggle (click)="resetStore()">Reset</mat-button-toggle>
+<mat-button-toggle (click)="openCreateDialog()">Create</mat-button-toggle>
 <p *ngIf="(guess$ | async)?.loadingPokemons">Chargement des pokémons</p>
 
 <div class="max-h-full overflow-y-scroll">
