--- a/src/app/guess/pokemon-item/app-create-pokemon-dialog.html
+++ b/src/app/guess/pokemon-item/app-create-pokemon-dialog.html
@@ -17,6 +17,13 @@
 				<mat-icon>close</mat-icon>
 			</button>
 		</mat-form-field>
+    <mat-form-field class="w-full">
+      <mat-label>Picture URL</mat-label>
+      <input
+        matInput
+        type="text"
+        [formControl]="pokemonCreateForm.controls.image" />
+    </mat-form-field>
 
 		<!--<div>
 			<img [src]="photoUrl" alt="{{ data.pokemon.name }}'s picture" />
