fix: select types in creation

--- a/src/app/guess/pokemon-item/app-create-pokemon-dialog.html
+++ b/src/app/guess/pokemon-item/app-create-pokemon-dialog.html
@@ -67,7 +67,7 @@
 						</mat-option>
 					</mat-select>
 				</mat-form-field>
-				<div>
+				<div *ngIf="selectedTypes.length > 0">
 					<span>Selected Types:</span>
 					<div class="selected-types">
 						<div
