--- a/src/app/guess/pokemon-item/app-confirm-duplication-dialog.html
+++ b/src/app/guess/pokemon-item/app-confirm-duplication-dialog.html
@@ -2,7 +2,5 @@
 <div mat-dialog-content>Would you like to duplicate this pokémon ?</div>
 <div mat-dialog-actions>
 	<button mat-button mat-dialog-close>No</button>
-	<button mat-button mat-dialog-close (click)="onSubmit()">
-		Ok
-	</button>
+	<button mat-button mat-dialog-close (click)="onSubmit()">Ok</button>
 </div>
