--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 	<div class="main-content">
 		<header>
 			<div class="flex h-full items-center w-full">
-				<a routerLink="/" class="w-1/3 h-full m-0"
+				<a class="w-1/3 h-full m-0" routerLink="/"
 					><img
 						alt="pokémon logo"
 						class="object-contain w-full h-full"
@@ -10,6 +10,19 @@
 				/></a>
 				<span class="text-white text-3xl md:text-6xl">Pokéguesser</span>
 				<div class="grow"></div>
+			</div>
+			<div
+				class="flex flex-nowrap h-16 text-black text-center align-middle">
+				<a
+					class="text-white text-2xl md:text-4xl grow"
+					routerLink="/game"
+					>Game</a
+				>
+				<a
+					class="text-white text-2xl md:text-4xl grow"
+					routerLink="/admin"
+					>admin</a
+				>
 			</div>
 		</header>
 		<main class="p-10">
