Auto stash before merge of "main" and "origin/main"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <div class="content" role="main">
 	<div class="main-content">
 		<header>
+			<div>
+				<ul>
+					<li (click)="lang('en')">English</li>
+					<li (click)="lang('fr')">French</li>
+				</ul>
+			</div>
 			<div class="flex h-full items-center w-full">
 				<a class="w-1/3 h-full m-0" routerLink="/"
 					><img
