--- a/src/app/guess/pokemon-item/app-confirm-duplication-dialog.html
+++ b/src/app/guess/pokemon-item/app-confirm-duplication-dialog.html
@@ -1,5 +1,5 @@
-<h1 mat-dialog-title>Duplicate Pokémon</h1>
-<div mat-dialog-content>Would you like to duplicate this pokémon ?</div>
+<h1 mat-dialog-title>{{ translationKeys.duplicatePokemon | translate }}</h1>
+<div mat-dialog-content>{{ translationKeys.wouldYouDuplicatePokemon | translate }}</div>
 <div mat-dialog-actions>
 	<button mat-button mat-dialog-close>No</button>
 	<button mat-button mat-dialog-close (click)="onSubmit()">Ok</button>
