--- a/src/app/guess/pokemon-item/app-confirm-deletion-dialog.html
+++ b/src/app/guess/pokemon-item/app-confirm-deletion-dialog.html
@@ -1,7 +1,7 @@
-<h1 mat-dialog-title>Delete Pokémon</h1>
-<div mat-dialog-content>Would you like to delete this pokémon ?</div>
+<h1 mat-dialog-title>{{ translationKeys.deletePokemon | translate }}</h1>
+<div mat-dialog-content>{{ translationKeys.wouldYouDeletePokemon | translate }}</div>
 <div mat-dialog-actions>
-	<button mat-button mat-dialog-close>No</button>
+	<button mat-button mat-dialog-close>{{ translationKeys.no | translate }}</button>
 	<button mat-button mat-dialog-close (click)="data.deleteAction()">
 		Ok
 	</button>
