--- a/src/app/guess/pokemon-item/app-create-pokemon-dialog.html
+++ b/src/app/guess/pokemon-item/app-create-pokemon-dialog.html
@@ -1,9 +1,8 @@
-<h1 mat-dialog-title>Create a Pokemon</h1>
-<!-- Chercher comment proposer les différents types-->
+<h1 mat-dialog-title>{{ translationKeys.createPokemon | translate }}</h1>
 <div mat-dialog-content>
 	<div class="pokemon-details">
 		<mat-form-field class="w-full">
-			<mat-label>Name</mat-label>
+			<mat-label>{{ translationKeys.name | translate }}</mat-label>
 			<input
 				matInput
 				type="text"
@@ -18,27 +17,24 @@
 			</button>
 		</mat-form-field>
 		<mat-form-field class="w-full">
-			<mat-label>Picture URL</mat-label>
+			<mat-label>{{ translationKeys.pictureURL | translate }}</mat-label>
 			<input
 				matInput
 				type="text"
 				[formControl]="pokemonCreateForm.controls.image" />
 		</mat-form-field>
 
-		<!--<div>
-			<img [src]="photoUrl" alt="{{ data.pokemon.name }}'s picture" />
-		</div>-->
 		<div>
 			<div class="mb-5">
 				<mat-form-field class="w-1/3 mr-8">
-					<mat-label>Height</mat-label>
+					<mat-label>{{ translationKeys.height | translate }}</mat-label>
 					<input
 						matInput
 						type="number"
 						[formControl]="pokemonCreateForm.controls.height" />
 				</mat-form-field>
 				<mat-form-field class="w-1/3">
-					<mat-label>Weight</mat-label>
+					<mat-label>{{ translationKeys.weight | translate }}</mat-label>
 					<input
 						matInput
 						type="number"
@@ -47,9 +43,9 @@
 			</div>
 
 			<div class="mb-5">
-				<span>Types:</span>
+				<span>{{ translationKeys.types | translate }}:</span>
 				<mat-form-field class="w-full">
-					<mat-label>Select Types</mat-label>
+					<mat-label>{{ translationKeys.selectTypes | translate }}</mat-label>
 					<mat-select
 						multiple
 						[formControl]="pokemonCreateForm.controls.types"
@@ -69,7 +65,7 @@
 					</mat-select>
 				</mat-form-field>
 				<div *ngIf="selectedTypes.length > 0">
-					<span>Selected Types:</span>
+					<span>{{ translationKeys.selectedTypes | translate }}</span>
 					<div class="selected-types">
 						<div
 							*ngFor="let type of selectedTypes"
@@ -92,37 +88,37 @@
 			</div>
 
 			<div>
-				<span>Battle Stats:</span>
+				<span>{{ translationKeys.battleStats | translate }}</span>
 				<mat-form-field class="w-full">
-					<mat-label>Attack</mat-label>
+					<mat-label>{{ translationKeys.attack | translate }}</mat-label>
 					<input
 						matInput
 						type="number"
 						[formControl]="pokemonCreateForm.controls.attack" />
 				</mat-form-field>
 				<mat-form-field class="w-full">
-					<mat-label>Defense</mat-label>
+					<mat-label>{{ translationKeys.defense | translate }}</mat-label>
 					<input
 						matInput
 						type="number"
 						[formControl]="pokemonCreateForm.controls.defense" />
 				</mat-form-field>
 				<mat-form-field class="w-full">
-					<mat-label>Speed</mat-label>
+					<mat-label>{{ translationKeys.speed | translate }}</mat-label>
 					<input
 						matInput
 						type="number"
 						[formControl]="pokemonCreateForm.controls.speed" />
 				</mat-form-field>
 				<mat-form-field class="w-full">
-					<mat-label>HP</mat-label>
+					<mat-label>{{ translationKeys.hp | translate }}</mat-label>
 					<input
 						matInput
 						type="number"
 						[formControl]="pokemonCreateForm.controls.hp" />
 				</mat-form-field>
 				<mat-form-field class="w-full">
-					<mat-label>Special Attack</mat-label>
+					<mat-label>{{ translationKeys.specialAttack | translate }}</mat-label>
 					<input
 						matInput
 						type="number"
@@ -132,11 +128,11 @@
 		</div>
 	</div>
 
-	<button (click)="onNoClick()" mat-button>Close</button>
+	<button (click)="onNoClick()" mat-button>{{ translationKeys.close | translate }}</button>
 	<button
 		(click)="onSubmit()"
 		[disabled]="pokemonCreateForm.invalid"
 		mat-button>
-		Confirm
+    {{ translationKeys.confirm | translate }}
 	</button>
 </div>
